samples/_failures_safe/1761206057_b63e50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caf45967.c: In function ‘main’:
./samples/SAFE/__tmp_caf45967.c:139:15: error: missing terminating " character
  139 |     if (scanf("%
      |               ^~
./samples/SAFE/__tmp_caf45967.c:139:5: error: expected expression at end of input
  139 |     if (scanf("%
      |     ^~
./samples/SAFE/__tmp_caf45967.c:139:5: error: expected declaration or statement at end of input
